feat(tests): update of the cucumber text for the personalised types.